<resources>
    <string name="app_name">Tip Off</string>
    <string name="company">Zerene</string>
    <string name="zerene_logo">zerene logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="returning_user">Returning user?</string>
    <string name="log_in">LOG IN</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="minimum_password_length_6">*Minimum password length = 6</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_availability">Check\nAvailability</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lgbtq">LGBTQ</string>
    <string name="new_user">New User?</string>
    <string name="search">search</string>
    <string name="contacts">Contacts</string>
    <string name="request_sent">Sent Requests</string>
    <string name="request_received">Received Requests </string>
    <string name="blocked">Blocked</string>
    <string name="nothing_to_show_here">Nothing to show here!</string>
    <string name="ghostmoji">👻</string>
    <string name="feels_so_lonely_in_here">Feels so lonely in here!</string>
    <string name="messages">Messages</string>
    <string name="general">General</string>
    <string name="m_private">Private</string>
    <string name="go">go</string>
    <string name="about_me">About Me</string>
    <string name="hobbies">Hobbies</string>
    <string name="when_i_am_around_don_t">When I am around, don\'t</string>
    <string name="links">links</string>
    <string name="edit_profile">edit profile</string>
    <string name="feed">Feed</string>
    <string name="postplus">post+</string>
    <string name="teams">Teams</string>
    <string name="help">help</string>
    <string name="display_picture">display picture</string>
    <string name="bg_account">bg account</string>
    <string name="dislikes">dislikes</string>
    <string name="log_out">Log out</string>
    <string name="interested_in">Interested In</string>
    <string name="relationship_status">Relationship status</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="belt_rank">Belt Rank</string>
    <string name="save">Save</string>
    <string name="dp_edit">DP Edit</string>
    <string name="add_contact">add contact</string>
    <string name="block">block</string>
    <string name="remove_contact">remove contact</string>
    <string name="acpt_rejct">accept/ reject</string>
    <string name="contact_request_confirmation_text">Are you sure, you want to send this user contact request?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_request">cancel request</string>
    <string name="remove_confirm_text">Sure you want to remove this user from your contacts?</string>
    <string name="request_message_optional">Request Message(optional)</string>
    <string name="block_confirm_text">Sure you want to block this contact?</string>
    <string name="options">options</string>
    <string name="receivedRespond">↙respond</string>
    <string name="accept_reject_text">Do you want to accept or reject this contact request?</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="upgrade_remove_text">Do you want to upgrade contact to close contacts or do you want to remove this contact</string>
    <string name="upgrade">upgrade</string>
    <string name="downgrade_remove_text">Do you want to upgrade contact to close contacts or do you want to remove this contact</string>
    <string name="downgrade">downgrade</string>
    <string name="unblock">unblock</string>
    <string name="star_options">⭐ options</string>
    <string name="close_contacts">Close Contacts</string>
    <string name="next_arrow"><![CDATA[>]]></string>
    <string name="previous_arrow"><![CDATA[<]]></string>
    <string name="search_with_e_mail_n_requires_watching_an_ad">"     search with e-mail\n(requires watching an ad)"</string>
    <string name="more_results">more results 🔰</string>
    <string name="view_image">View Image</string>
    <string name="view_card">View Card</string>
    <string name="load_more">"  Load More  "</string>
    <string name="message_dotx3">Message...</string>
    <string name="triple_dots_vertical">⋮</string>


</resources>
