<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/granular_blue">

    <ImageButton
        android:id="@+id/mycontacts"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/feed"
        android:layout_alignStart="@+id/feed"
        android:layout_toStartOf="@+id/newpost"
        android:background="#00FFFFFF"
        android:contentDescription="@string/contacts"
        android:onClick="openContactsActivity"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tab_icon_contacts"
        android:tint="@color/bgcolorcard"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/mymessages"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/newpost"
        android:layout_alignStart="@+id/newpost"
        android:layout_alignEnd="@+id/newpost"
        android:background="#00FFFFFF"
        android:contentDescription="@string/messages"
        android:onClick="openMessagesActivity"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tab_icon_message"
        android:tint="@color/bgcolorcard" />

    <ImageButton
        android:id="@+id/feed"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/newpost"
        android:background="#00FFFFFF"
        android:contentDescription="@string/feed"
        android:paddingStart="3dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tab_icon_feed"
        android:tint="@color/bgcolorcard"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/newpost"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignEnd="@+id/myteams"
        android:layout_centerVertical="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/postplus"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/tab_icon_new_post"
        android:tint="@color/bgcolorcard"
        app:layout_constraintHorizontal_bias="0.7" />

    <ImageButton
        android:id="@+id/myteams"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_below="@+id/feed"
        android:layout_centerHorizontal="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/teams"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/teams" />
</RelativeLayout>