<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="fill"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appLabel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/nameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="20"
                android:fontFamily="serif"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="35"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/emailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/passCriteriaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minimum_password_length_6"
                android:textAlignment="center"
                android:textColor="@color/hint"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/confPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/usernameSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/hint"
                    android:ems="20"
                    android:fontFamily="serif"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="25"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/hint"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toStartOf="@+id/checkUsername"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/checkUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="#DB94B399"
                    android:onClick="checkUsername"
                    android:text="@string/check_availability"
                    android:textAlignment="center"
                    android:textColor="#DB53685E"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/usernameSignUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:checkedButton="@id/male"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGender_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/colorAccent"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/male"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gButton_onClick"
                    android:text="@string/male"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/female"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gButton_onClick"
                    android:text="@string/female"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/lgbtq"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="gButton_onClick"
                    android:text="@string/lgbtq"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="signup_onClick"
        android:text="@string/sign_up"
        android:textColor="@color/bgcoloract"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/gotologintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returning_user"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gotoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loginActivity"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gotologintext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>