<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appLabel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:elevation="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/emailLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/passwordLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/hint"
                android:ems="10"
                android:fontFamily="serif"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/hint"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/logIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="login_onClick"
        android:text="@string/log_in"
        android:textColor="@color/bgcoloract"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alreadyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/logIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/alreadyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textAlignment="textEnd"
            android:textColor="@color/hint"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gotoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signupActivity"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="#2F427A"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/alreadyView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>