<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView7"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardBackgroundColor="#B5DFF1FF"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/usernameViewSSR"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_gravity="center_horizontal"
                android:gravity="bottom|center_horizontal"
                android:text="@string/username"
                android:textColor="@color/Accent"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.335" />

            <Button
                android:id="@+id/verifiedSSR"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/verified"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nameViewSSR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="29dp"
                android:foregroundGravity="top"
                android:text="@string/name"
                android:textColor="@color/Accent"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:cardCornerRadius="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewSSR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile"
            android:contentDescription="@string/display_picture" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
