<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <Button
        android:id="@+id/su"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_corner"
        android:text="🔍"
        app:layout_constraintStart_toEndOf="@+id/editTextSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nextQ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchEmailSearch"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/nextQ"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:background="@drawable/round_corner"
        android:text="@string/more_results"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchEmailSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:showText="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/search_with_e_mail_n_requires_watching_an_ad"
        android:textColor="@color/Accent"
        android:textOn="@string/e_mail"
        android:textSize="14sp"
        android:thumb="@drawable/round_corner"
        android:thumbTint="#669FCAEF"
        android:trackTint="#BF0F708E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/processSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#951E3F78"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>